[package]
name = "aether-throughput"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
superconsole = "0.1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
argh = "0.1"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "*"
derive_more = "*"
futures-util = "*"
